@@ -1,6 +1,8 @@
 package core.linlang.view.spec;
 
 import java.util.Map;
+import java.util.Collections;
+import java.util.LinkedHashMap;
 
 public record ActionSpec(
         String type,                  // hook/open/back/close/state...
@@ -8,7 +10,9 @@ public record ActionSpec(
         String refresh                // "", "view", "area:items"
 ) {
     public ActionSpec {
-        args = args == null ? java.util.Map.of() : java.util.Map.copyOf(args);
+        args = args == null
+                ? Map.of()
+                : Collections.unmodifiableMap(new LinkedHashMap<>(args));
         refresh = refresh == null ? "" : refresh;
         type = type == null ? "" : type;
     }
